multus/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: multus
  labels:
    name: multus
