multus/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: multus-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: sidecar
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels: {}
